# ParEval-Repo

./: .gitignore  CLAUDE.md  README.md  eg-command.sbatch  ex-command.sh  pyproject.toml  requirements.txt  translate-runner.sh  translate-sweep.sbatch  translate.sbatch
data/XSBench/naive-gemini-cuda-to-kokkos/output-1/repo/: CMakeLists.txt  GridInit.c  GridInit.cpp  Main.c  Main.cpp  Makefile  Materials.c  Materials.cpp  README.md  Simulation.c  Simulation.cpp  XSbench_header.h  XSbench_header.hpp  XSbench_shared_header.h  XSbench_shared_header.hpp  io.c  io.cpp
data/XSBench/naive-gemini-cuda-to-kokkos/output-3/repo/: CMakeLists.txt  GridInit.c  GridInit.cpp  Main.c  Main.cpp  Makefile  Materials.c  Materials.cpp  README.md  Simulation.c  Simulation.cpp  XSbench_header.h  XSbench_header.hpp  XSbench_shared_header.h  XSbench_shared_header.hpp  io.c  io.cpp
data/XSBench/naive-gemini-cuda-to-kokkos/output-4/repo/: CMakeLists.txt  GridInit.c  GridInit.cpp  Main.c  Main.cpp  Makefile  Materials.c  Materials.cpp  Simulation.c  Simulation.cpp  XSbench_header.h  XSbench_header.hpp  XSbench_shared_header.h  XSbench_shared_header.hpp  XSutils.cpp  io.c  io.cpp
data/XSBench/naive-gemini-cuda-to-omp/output-1/: CMakeLists.txt  GridInit.cu  Main.cu  Makefile  README.md  Simulation.cu  XSbench_header.cuh  experiment_metadata.json  io.cu
data/XSBench/naive-gemini-cuda-to-omp/output-1/interactions/: CMakeLists.txt.txt  GridInit.cu.txt  Main.cu.txt  Makefile.txt  Materials.cu.txt  README.md.txt  Simulation.cu.txt  XSbench_header.cuh.txt  XSbench_shared_header.h.txt  XSutils.cu.txt  io.cu.txt
data/XSBench/naive-gemini-cuda-to-omp/output-1/repo/: CMakeLists.txt  GridInit.c  Main.c  Makefile  README.md  Simulation.c  XSbench_header.h  XSbench_shared_header.h  XSutils.c  io.c
data/XSBench/naive-gemini-cuda-to-omp/output-2/: CMakeLists.txt  GridInit.cu  Main.cu  Makefile  README.md  Simulation.cu  XSbench_header.cuh  experiment_metadata.json  io.cu
data/XSBench/naive-gemini-cuda-to-omp/output-2/interactions/: CMakeLists.txt.txt  GridInit.cu.txt  Main.cu.txt  Makefile.txt  README.md.txt  Simulation.cu.txt  XSbench_header.cuh.txt  XSbench_shared_header.h.txt  XSutils.cu.txt  io.cu.txt
data/XSBench/naive-gemini-cuda-to-omp/output-2/repo/: CMakeLists.txt  GridInit.c  Main.c  Makefile  README.md  Simulation.c  XSbench_header.h  XSbench_shared_header.h  XSutils.c  io.c
data/XSBench/naive-gemini-cuda-to-omp/output-3/: CMakeLists.txt  GridInit.cu  Main.cu  Makefile  README.md  Simulation.cu  XSbench_header.cuh  experiment_metadata.json  io.cu
data/XSBench/naive-gemini-cuda-to-omp/output-3/interactions/: CMakeLists.txt.txt  GridInit.cu.txt  Main.cu.txt  Makefile.txt  Materials.cu.txt  README.md.txt  Simulation.cu.txt  XSbench_header.cuh.txt  XSbench_shared_header.h.txt  XSutils.cu.txt  io.cu.txt
data/XSBench/naive-gemini-cuda-to-omp/output-3/repo/: CMakeLists.txt  GridInit.c  Main.c  Makefile  README.md  Simulation.c  XSbench_header.h  XSbench_shared_header.h  XSutils.c  io.c
data/XSBench/naive-gemini-cuda-to-omp/output-4/: CMakeLists.txt  GridInit.cu  Main.cu  Makefile  Materials.cu  README.md  Simulation.cu  XSbench_header.cuh  experiment_metadata.json  io.cu
data/XSBench/naive-gemini-cuda-to-omp/output-4/interactions/: CMakeLists.txt.txt  GridInit.cu.txt  Main.cu.txt  Makefile.txt  README.md.txt  Simulation.cu.txt  XSbench_header.cuh.txt  XSbench_shared_header.h.txt  XSutils.cu.txt  io.cu.txt
data/XSBench/naive-gemini-cuda-to-omp/output-4/repo/: CMakeLists.txt  GridInit.c  Main.c  Makefile  README.md  Simulation.c  XSbench_header.h  XSbench_shared_header.h  io.c
data/XSBench/naive-gpt-4o-cuda-to-omp/output-1/repo/: CMakeLists.txt  Main.c  Materials.c  Simulation.c  XSutils.c
data/XSBench/naive-gpt-4o-cuda-to-omp/output-5/repo/: CMakeLists.txt  Main.c  Materials.c  Simulation.c  XSutils.c
data/XSBench/naive-gpt-4o-mini-cuda-to-kokkos/output-1/repo/: CMakeLists.txt  GridInit.cpp  Makefile  Materials.cpp  README.md  Simulation.cpp  XSbench_header.hpp  XSbench_shared_header.hpp  io.cpp
data/XSBench/naive-gpt-4o-mini-cuda-to-kokkos/output-2/repo/: CMakeLists.txt  GridInit.cpp  Makefile  Materials.cpp  README.md  Simulation.cpp  XSbench_header.hpp  XSbench_shared_header.hpp  io.cpp
data/XSBench/naive-gpt-4o-mini-cuda-to-kokkos/output-3/repo/: CMakeLists.txt  Materials.cpp  Simulation.cpp  XSutils.cpp
data/XSBench/naive-gpt-4o-mini-cuda-to-kokkos/output-4/repo/: CMakeLists.txt  GridInit.cpp  Main.cpp  Makefile  Materials.cpp  README.md  Simulation.cpp  XSbench_header.hpp  XSbench_shared_header.hpp  XSutils.cpp  io.cpp
data/XSBench/naive-gpt-4o-mini-cuda-to-kokkos/output-5/repo/: CMakeLists.txt  GridInit.cpp  Main.cpp  Makefile  Materials.cpp  README.md  Simulation.cpp  XSbench_header.hpp  XSbench_shared_header.hpp  XSutils.cpp  io.cpp
data/XSBench/naive-gpt-4o-mini-cuda-to-omp/output-3/repo/: CMakeLists.txt  GridInit.c  Main.c  Makefile  Materials.c  README.md  Simulation.c  XSbench_header.h  XSbench_shared_header.h  XSutils.c  io.c
data/XSBench/naive-llama-3.1-cuda-to-omp/output-1/repo/: CMakeLists.txt  GridInit.c  Main.c  Makefile  Materials.c  README.md  Simulation.c  XSbench_header.h  XSbench_shared_header.h  XSutils.c  io.c
data/XSBench/naive-llama-3.1-cuda-to-omp/output-3/repo/: CMakeLists.txt  GridInit.c  Main.c  Makefile  Materials.c  io.c  (+5 more)
targets/XSBench/cuda/: CMakeLists.txt  GridInit.cu  Makefile  Materials.cu  XSbench_header.cuh  target.json
targets/XSBench/cuda/repo/: Main.cu  README.md  Simulation.cu  XSbench_header.cuh  XSutils.cu  io.cu
targets/XSBench/kokkos/: CMakeLists.txt  README.md  XSbench_header.hpp  io.cpp  target.json
targets/XSBench/kokkos/repo/: CMakeLists.txt  GridInit.cpp  Main.cpp  Materials.cpp  Simulation.cpp  XSbench_header.hpp  XSutils.cpp
targets/XSBench/openmp-offload/: CMakeLists.txt  GridInit.c  Makefile  Materials.c  README.md  XSbench_header.h  target.json
targets/XSBench/openmp-offload/repo/: Main.c  Simulation.c  XSbench_header.h  XSbench_shared_header.h  XSutils.c  io.c
targets/nanoXOR/kokkos/repo/: CMakeLists.txt
(+2598 files in other folders)
